v1.4.4 
- Added Click Teleport - Teleport to where you click
- Added Peer 2 Peer Communication - Adds [LethalMenu {version}] before their names in players tab (1.4.4+) 
- Added New Enemies To Cham Toggles 
- Added Grab Objects Before Game - You can pick up items
- Added Toggle All For Displays - Added a toggle to enable and disable all display options
- Added Toggle Terminal Sound - Spam the terminal sound
- Added Discord Link to Watermark 
- Added FPS Counter - Displays your FPS
- Added Vehicle Godmode - Cruiser doesn't take damage
- Added Color Customization to info display
- Added Hack Highlight - Hacks are highlighted
- Added Hack Highlight Customization - Set the color of the highlighted hacks 
- Added Transmitt - You can send messages as the signal transmitter
- Added Message Prefixes - [System], [Server], [Broadcast] - You can send messages in chat as these prefixes like [Prefix] {message}
- Added Message as other players 
- Added Suit Manager - View all suits with buy all and wear on buy
- Added Unlock All Suits - Unlocks all suits
- Added Wear On Buy to suit manager - Buys the suit and wears 
- Added Eggs Never Explode - Easter Eggs never explode when you throw them
- Added Force Bleed - Force others players to bleed 
- Added Unlimited Zap Gun - You can shock forever
- Added Delete Terminal - Teleports terminal to -1000, -1000, -1000
- Added Reset Ship (Host Only) - Resets everything about the ship
- Added BushWolf, RadMach, and Cave Dweller to lure
- Added Panic - Disables all hacks and hides the watermark
- Added Copy Lobby ID - Copy a lobby id (Its just the hosts steam id)
- Added Join Lobby - Join using the lobby id
- Added Color Customization To Info Display - It changes based on your c_primary color
- Fixed Themes - They now save in settings and load properly 
- Fixed Never Lose Scrap - I forgot to add the check for the hack being enabled but its fixed now
- Fixed First Setup Manager - The buttons were overlapping themselves from a style