@@ -8,6 +8,7 @@ using Steamworks;
 using Steamworks.Data;
 using Unity.Netcode;
 using Object = UnityEngine.Object;
+using LethalMenu.Types;
 
 
 namespace LethalMenu.Menu.Tab
@@ -108,6 +109,27 @@ namespace LethalMenu.Menu.Tab
                     t.Interact(LethalMenu.localPlayer.transform);
                 });
             }
+
+
+            GUILayout.BeginHorizontal();
+            GUILayout.Label("PJ Plushie");
+            GUILayout.FlexibleSpace();
+            if (GUILayout.Button("Execute"))
+            {
+                string objName = "PlushiePJManContainer(Clone)";
+                GameObject obj = GameObject.Find(objName);
+
+                AnimatedObjectTrigger trigger = obj.GetComponentInChildren<AnimatedObjectTrigger>();
+
+                trigger.TriggerAnimation(LethalMenu.localPlayer);
+
+                Debug.Log("Triggered Animation");
+                Debug.Log(trigger.transform.parent.gameObject.name);
+
+                
+
+            }
+
             GUILayout.EndHorizontal();
             GUILayout.EndScrollView(); 
         }
