@@ -43,7 +43,7 @@ namespace LethalMenu.Menu.Tab
             UI.Hack(Hack.TeleportOneItem, "TrollTab.TeleportOneItem");
             UI.Hack(Hack.EjectEveryone, ["TrollTab.EjectEveryone", "General.HostTag"]);
             UI.Hack(Hack.DeleteTerminal, "TrollTab.DeleteTerminal");
-
+            UI.HackSlider(Hack.PJSpammer, "TrollTab.PJSpammer", Settings.f_pjSpamSpeed.ToString("0.00"), ref Settings.f_pjSpamSpeed, 0f, 1f);
             GUILayout.EndScrollView();
         }
     }
