@@ -78,6 +78,7 @@
 	"SelfTab.VehicleGodMode": "Vehicle God Mode",
 	"SelfTab.EggsNeverExplode": "Eggs Never Explode",
 	"SelfTab.GrabItemsBeforeGame": "Grab Items Before Game",
+	"SelfTab.ClickTeleport": "Click To Teleport",
 	"EnemyTab.Title": "Enemy",
 	"EnemyTab.EnemyList": "Enemy List",
 	"EnemyTab.EnemyTypes": "Enemy Types",
@@ -198,6 +199,7 @@
 	"TrollTab.OpenShipDoorSpace": "Open Ship Door Space",
 	"TrollTab.CarHorn": "Toggle Car Horn",
 	"TrollTab.DeleteTerminal": "Delete Terminal",
+	"TrollTab.PJSpammer": "PJ Plushie Spammer",
 	"VisualsTab.Title": "Visuals",
 	"VisualsTab.ESP": "ESP",
 	"VisualsTab.ToggleAll": "Toggle All",
